添加共享面具功能

--- a/app/components/mask.module.scss
+++ b/app/components/mask.module.scss
@@ -72,6 +72,11 @@
           .mask-name {
             font-size: 14px;
             font-weight: bold;
+            .mask-share {
+              font-size: 12px;
+              margin-left: 5px;
+              color: var(--primary);
+            }
           }
           .mask-info {
             font-size: 12px;
